# plant-diagnosis

./: .env  .gitignore  Makefile  README  README.md  default.conf  docker-compose.yml
controller/: .gitignore  Dockerfile  go.mod  go.sum  main.go  main.py  pyproject.toml
controller/application/: account_application_service.go  prediction_application_service.go
controller/domain/model/: authentication.go  date_time.go  permission.go  prediction_label.go  prediction_model.go  prediction_result.go  role.go  ulid.go  user.go
controller/domain/repository/: authentication_repository.go  prediction_model_repository.go  prediction_result_repository.go  user_repository.go
controller/domain/service/: prediction_service.go
controller/infrastructure/: db.go
controller/infrastructure/database/: authentication_database.go  authentication_entity.go  prediction_label_entity.go  prediction_model_database.go  prediction_model_entity.go  prediction_result_database.go  prediction_result_entity.go  ulid_model_entity.go  user_database.go  user_entity.go
controller/interface/handler/: account_handler.go  authorization.go  prediction_handler.go
controller/interface/messages/: account_message.go  prediction_message.go
controller/interface/router/: account_router.go  prediction_router.go
controller/model/: authentication.py  id_model.py  prediction.py  prediction_class.py  prediction_model.py  user.py
controller/prediction/: resnet.py  utils.py
controller/registry/: registry.go
manager/: .env  Dockerfile  docker-compose.yml  package.json
nginx/: default.conf
(+35 files in other folders)
